// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Form/> should render with preloaded data 1`] = `
<div>
  <div
    class="wrapper"
  >
    <div>
      <div
        class="title"
      >
        Configure HTTP action
      </div>
      <div
        class="subtitle"
      />
    </div>
    <i
      class="material-icons icon"
    >
      close
    </i>
  </div>
  <form>
    <div
      class="wrapper"
    >
      <div
        class="formParamRow"
      >
        <div>
          <label
            class="label label"
            for="input-text-5"
          >
            Button title
            <abbr
              aria-label="required"
              class="abbr"
              title="required"
            >
              *
            </abbr>
          </label>
          <div
            class="wrapper"
          >
            <input
              class="input"
              id="input-text-5"
              name="label"
              required=""
              type="text"
              value="label"
            />
          </div>
        </div>
      </div>
      <div
        class="http"
      >
        <div
          class="formParamRow"
        >
          <div
            class="formParamSelect"
          >
            <label
              class="label selectLabel"
              for="httpMethod"
            >
              Method
            </label>
            <div>
              <div
                class="dropdown"
              >
                <div
                  aria-expanded="false"
                  aria-haspopup="true"
                  class=""
                  data-toggle="dropdown"
                >
                  <div
                    class="select dropdown-toggle"
                  >
                    <span
                      class="label"
                      data-testid="selected-httpMethod"
                      style="min-width: 10px; opacity: 1;"
                    >
                      GET
                    </span>
                    <input
                      autocomplete="chrome-off"
                      class="input"
                      id="httpMethod"
                      style="min-width: 10px;"
                      type="text"
                      value=""
                    />
                    <i
                      class="material-icons dropdownIcon"
                    >
                      arrow_drop_down
                    </i>
                  </div>
                </div>
                <div
                  aria-hidden="true"
                  class="options longDropdown dropdown-menu"
                  role="menu"
                  tabindex="-1"
                >
                  
                  <button
                    class="option option--focused dropdown-item"
                    role="menuitem"
                    tabindex="0"
                    type="button"
                  >
                    <span>
                      GET
                    </span>
                  </button>
                  <button
                    class="option dropdown-item"
                    role="menuitem"
                    tabindex="0"
                    type="button"
                  >
                    <span>
                      POST
                    </span>
                  </button>
                  <button
                    class="option dropdown-item"
                    role="menuitem"
                    tabindex="0"
                    type="button"
                  >
                    <span>
                      PUT
                    </span>
                  </button>
                  <button
                    class="option dropdown-item"
                    role="menuitem"
                    tabindex="0"
                    type="button"
                  >
                    <span>
                      PATCH
                    </span>
                  </button>
                  <button
                    class="option dropdown-item"
                    role="menuitem"
                    tabindex="0"
                    type="button"
                  >
                    <span>
                      DELETE
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
          <div
            class="formParamLargeCol"
          >
            <div>
              <label
                class="label label"
                for="input-text-7"
              >
                URL
                <abbr
                  aria-label="required"
                  class="abbr"
                  title="required"
                >
                  *
                </abbr>
              </label>
              <div
                class="wrapper"
              >
                <input
                  class="input"
                  id="input-text-7"
                  name="url"
                  pattern="*"
                  required=""
                  type="text"
                  value="www.someurl.com"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="formParamSection"
        >
          Headers
        </div>
        <div>
          <button
            aria-disabled="false"
            class="wrapper fill secondary small"
            type="button"
          >
            <span
              class="wrapper"
            >
              <i
                class="material-icons icon isLeft small"
              >
                add
              </i>
            </span>
            Header
          </button>
        </div>
        <div
          class="formParamSection"
        >
          Query Parameters
        </div>
        <div>
          <button
            aria-disabled="false"
            class="wrapper fill secondary small"
            type="button"
          >
            <span
              class="wrapper"
            >
              <i
                class="material-icons icon isLeft small"
              >
                add
              </i>
            </span>
            Parameter
          </button>
        </div>
      </div>
    </div>
    <div
      class="wrapper wrapper"
    >
      <div
        class="actions"
      >
        <div
          class="childWrapper"
        >
          <button
            aria-disabled="false"
            class="wrapper fill secondary medium"
            type="button"
          >
            <span>
              Cancel
            </span>
          </button>
        </div>
        <div
          class="childWrapper"
        >
          <button
            aria-disabled="false"
            class="wrapper fill primary medium"
            type="submit"
          >
            <span>
              Save
            </span>
          </button>
        </div>
      </div>
    </div>
  </form>
</div>
`;

exports[`<Form/> should render without any data 1`] = `
<div>
  <div
    class="wrapper"
  >
    <div>
      <div
        class="title"
      >
        Configure HTTP action
      </div>
      <div
        class="subtitle"
      />
    </div>
    <i
      class="material-icons icon"
    >
      close
    </i>
  </div>
  <form>
    <div
      class="wrapper"
    >
      <div
        class="formParamRow"
      >
        <div>
          <label
            class="label label"
            for="input-text-1"
          >
            Button title
            <abbr
              aria-label="required"
              class="abbr"
              title="required"
            >
              *
            </abbr>
          </label>
          <div
            class="wrapper"
          >
            <input
              class="input"
              id="input-text-1"
              name="label"
              required=""
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
      <div
        class="http"
      >
        <div
          class="formParamRow"
        >
          <div
            class="formParamSelect"
          >
            <label
              class="label selectLabel"
              for="httpMethod"
            >
              Method
            </label>
            <div>
              <div
                class="dropdown"
              >
                <div
                  aria-expanded="false"
                  aria-haspopup="true"
                  class=""
                  data-toggle="dropdown"
                >
                  <div
                    class="select dropdown-toggle"
                  >
                    <span
                      class="label"
                      data-testid="selected-httpMethod"
                      style="min-width: 10px; opacity: 1;"
                    >
                      GET
                    </span>
                    <input
                      autocomplete="chrome-off"
                      class="input"
                      id="httpMethod"
                      style="min-width: 10px;"
                      type="text"
                      value=""
                    />
                    <i
                      class="material-icons dropdownIcon"
                    >
                      arrow_drop_down
                    </i>
                  </div>
                </div>
                <div
                  aria-hidden="true"
                  class="options longDropdown dropdown-menu"
                  role="menu"
                  tabindex="-1"
                >
                  
                  <button
                    class="option option--focused dropdown-item"
                    role="menuitem"
                    tabindex="0"
                    type="button"
                  >
                    <span>
                      GET
                    </span>
                  </button>
                  <button
                    class="option dropdown-item"
                    role="menuitem"
                    tabindex="0"
                    type="button"
                  >
                    <span>
                      POST
                    </span>
                  </button>
                  <button
                    class="option dropdown-item"
                    role="menuitem"
                    tabindex="0"
                    type="button"
                  >
                    <span>
                      PUT
                    </span>
                  </button>
                  <button
                    class="option dropdown-item"
                    role="menuitem"
                    tabindex="0"
                    type="button"
                  >
                    <span>
                      PATCH
                    </span>
                  </button>
                  <button
                    class="option dropdown-item"
                    role="menuitem"
                    tabindex="0"
                    type="button"
                  >
                    <span>
                      DELETE
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
          <div
            class="formParamLargeCol"
          >
            <div>
              <label
                class="label label"
                for="input-text-3"
              >
                URL
                <abbr
                  aria-label="required"
                  class="abbr"
                  title="required"
                >
                  *
                </abbr>
              </label>
              <div
                class="wrapper"
              >
                <input
                  class="input"
                  id="input-text-3"
                  name="url"
                  pattern="*"
                  required=""
                  type="text"
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="formParamSection"
        >
          Headers
        </div>
        <div>
          <button
            aria-disabled="false"
            class="wrapper fill secondary small"
            type="button"
          >
            <span
              class="wrapper"
            >
              <i
                class="material-icons icon isLeft small"
              >
                add
              </i>
            </span>
            Header
          </button>
        </div>
        <div
          class="formParamSection"
        >
          Query Parameters
        </div>
        <div>
          <button
            aria-disabled="false"
            class="wrapper fill secondary small"
            type="button"
          >
            <span
              class="wrapper"
            >
              <i
                class="material-icons icon isLeft small"
              >
                add
              </i>
            </span>
            Parameter
          </button>
        </div>
      </div>
    </div>
    <div
      class="wrapper wrapper"
    >
      <div
        class="actions"
      >
        <div
          class="childWrapper"
        >
          <button
            aria-disabled="false"
            class="wrapper fill secondary medium"
            type="button"
          >
            <span>
              Cancel
            </span>
          </button>
        </div>
        <div
          class="childWrapper"
        >
          <button
            aria-disabled="false"
            class="wrapper fill primary medium"
            type="submit"
          >
            <span>
              Save
            </span>
          </button>
        </div>
      </div>
    </div>
  </form>
</div>
`;
